// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure VM and VMSS skill router for recommendation, pricing, sizing, and connectivity troubleshooting. WHEN: recommend VM size, which VM should I use, choose Azure VM, machine learning VM, memory-intensive workload, burstable VM, lightweight web app, cheapest Azure VM for website, VM pricing, cost estimate, VM families, VMSS, scale set, flexible orchestration, uniform orchestration, can't connect to VM, unreachable VM, RDP not working, SSH refused, SSH into Azure Linux VM, VM black screen, NSG rules blocking traffic, reset VM password, VM connectivity, troubleshoot my VM, can't reach my VM.",
  "extractedKeywords": [
    "azure",
    "black",
    "blocking",
    "burstable",
    "cheapest",
    "choose",
    "compute",
    "connect",
    "connectivity",
    "cost",
    "estimate",
    "families",
    "flexible",
    "into",
    "learning",
    "lightweight",
    "linux",
    "machine",
    "memory-intensive",
    "orchestration",
    "password",
    "pricing",
    "reach",
    "recommend",
    "recommendation",
    "refused",
    "reset",
    "router",
    "rules",
    "scale",
    "screen",
    "should",
    "size",
    "sizing",
    "skill",
    "traffic",
    "troubleshoot",
    "troubleshooting",
    "uniform",
    "unreachable",
    "vmss",
    "website",
    "when",
    "which",
    "working",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "azure",
  "black",
  "blocking",
  "burstable",
  "cheapest",
  "choose",
  "compute",
  "connect",
  "connectivity",
  "cost",
  "estimate",
  "families",
  "flexible",
  "into",
  "learning",
  "lightweight",
  "linux",
  "machine",
  "memory-intensive",
  "orchestration",
  "password",
  "pricing",
  "reach",
  "recommend",
  "recommendation",
  "refused",
  "reset",
  "router",
  "rules",
  "scale",
  "screen",
  "should",
  "size",
  "sizing",
  "skill",
  "traffic",
  "troubleshoot",
  "troubleshooting",
  "uniform",
  "unreachable",
  "vmss",
  "website",
  "when",
  "which",
  "working",
  "workload",
]
`;
